--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,10 +1,140 @@
 <!DOCTYPE html>
+
+<html xmlns:th="http://www.thymeleaf.org">
+
+<head>
+    <title> Supremo Healthcare </title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+
+</head>
+
+<body>
+    <div class="container">
+        <div class="p-3 mb-2 bg-warning text-dark .bg-gradient text-center fst-italic fw-bold">
+            <h1> Supremo Healthcare </h1>
+        </div>
+
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">Navbar</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Link</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Dropdown
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="#">Action</a></li>
+                                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                            </li>
+                        </ul>
+                        <!--<form class="d-flex">
+                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-outline-success" type="submit">Search</button>
+                        </form>-->
+                    </div>
+                </div>
+            </nav>
+
+        <div class="p-3 mb-2 bg-info text-dark .bg-gradient">
+            <h5 th:text="${applicationTitle}"></h5>
+        </div>
+
+            <table class="table">
+                <tr>
+                    <th>Bed No</th>
+                    <th>Availability</th>
+                    <th>Name of Person</th>
+                </tr>
+                <tr>
+                    <!--<td th:text="${prod.name}">Onions</td>
+                    <td th:text="${prod.price}">2.41</td>
+                    <td th:text="${prod.inStock}? #{true} : #{false}">yes</td>-->
+                    <td>1</td>
+                    <td>Available</td>
+                    <td>person1</td>
+                </tr>
+                <tr>
+                    <!--<td th:text="${prod.name}">Onions</td>
+                    <td th:text="${prod.price}">2.41</td>
+                    <td th:text="${prod.inStock}? #{true} : #{false}">yes</td>-->
+                    <td>2</td>
+                    <td>Not available</td>
+                    <td>person2</td>
+                </tr>
+                <tr>
+                    <!--<td th:text="${prod.name}">Onions</td>
+                    <td th:text="${prod.price}">2.41</td>
+                    <td th:text="${prod.inStock}? #{true} : #{false}">yes</td>-->
+                    <td>1</td>
+                    <td>Reserved</td>
+                    <td>person3</td>
+                </tr>
+            </table>
+
+            <p>
+                <a href="../home.html" th:href="@{/}">Return to home</a>
+            </p>
+    </div>
+</body>
+
+</html>
+
+<!--
+<!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <meta charset="UTF-8">
     <h1>Supremo</h1>
 </head>
 <body>
-    <h3> Health Care App</h3>
+<h3> Health Care App</h3>
+
+<table class="table">
+    <thead>
+    <tr>
+        <th scope="col">#</th>
+        <th scope="col">First</th>
+        <th scope="col">Last</th>
+        <th scope="col">Handle</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <th scope="row">1</th>
+        <td>Mark</td>
+        <td>Otto</td>
+        <td>@mdo</td>
+    </tr>
+    <tr>
+        <th scope="row">2</th>
+        <td>Jacob</td>
+        <td>Thornton</td>
+        <td>@fat</td>
+    </tr>
+    <tr>
+        <th scope="row">3</th>
+        <td colspan="2">Larry the Bird</td>
+        <td>@twitter</td>
+    </tr>
+    </tbody>
+</table>
 </body>
-</html>
+</html>-->
