--- a/src/main/resources/templates/hospitalCreateFormPage.html
+++ b/src/main/resources/templates/hospitalCreateFormPage.html
@@ -57,9 +57,15 @@
             </div>
         </div>
         <div class="row mb-3">
-            <label class="col-sm-2 col-form-label">ICU</label>
+            <label class="col-sm-2 col-form-label">Positive ICU</label>
             <div class="col-sm-10">
-                <input type="text" name="icu" th:value="${hospitalUpdateForm.icu}">
+                <input type="text" name="positive_icu" th:value="${hospitalUpdateForm.positive_icu}">
+            </div>
+        </div>
+        <div class="row mb-3">
+            <label class="col-sm-2 col-form-label">SARI ICU</label>
+            <div class="col-sm-10">
+                <input type="text" name="sari_icu" th:value="${hospitalUpdateForm.sari_icu}">
             </div>
         </div>
         <!--<div class="mb-3">
