Navbar links fix in mobile view

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -18,10 +18,10 @@
             <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#">Navbar</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <!--<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    </button>-->
+                    <div class="navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="/home">Home</a>
@@ -54,7 +54,7 @@
                     <th scope="col">HDU</th>
                     <th scope="col">Positive ICU</th>
                     <th scope="col">SARI ICU</th>
-                    <th colspan="2"scope="col">Actions</th>
+                    <th colspan="2" scope="col">Actions</th>
                 </tr>
                 </thead>
                 <tbody>
