--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
 <head>
     <title> Supremo Healthcare </title>
@@ -11,85 +12,102 @@
 
 <body>
     <div class="container">
-        <div class="p-3 mb-2 bg-warning text-dark .bg-gradient text-center fst-italic fw-bold">
+        <div class="p-3 bg-warning text-dark .bg-gradient text-center fst-italic fw-bold">
             <h1> Supremo Healthcare </h1>
         </div>
 
             <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="/home">Home</a>
-                    <a class="navbar-brand" href="/hospitalcreate">Add Facility</a>
+                    <div sec:authorize="hasAuthority('ADMIN')">
+                        <a class="navbar-brand" href="/hospitalcreate">Add Facility</a>
+                    </div>
+                    <form th:action="@{/logout}" method="post">
+                        <input type="submit" value="Logout" />
+                    </form>
                 </div>
             </nav>
-
+        <div class="visually-hidden" sec:authorize="isAuthenticated()">
+            Welcome <b><span sec:authentication="name">Username</span></b>
+            &nbsp;
+            <i><span sec:authentication="principal.authorities">Roles</span></i>
+        </div>
         <div class="p-3 bg-info text-dark .bg-gradient">
             <h5> Bed Allocation Details </h5>
         </div>
 
         <div class="table-responsive">
-            <table class="table table-info table-bordered">
+            <table class="table table-info table-bordered align-middle">
                 <thead>
                 <tr>
                     <th scope="col">SR No.</th>
                     <th scope="col">DCHCs Kalaburagi</th>
-                    <th colspan="4" scope="col">General Isolation</th>
-                    <th colspan="3" scope="col">ICU/HDU</th>
-                    <th colspan="2" scope="col">Events</th>
+                    <th class="align-middle" colspan="4" scope="col">General Isolation</th>
+                    <th class="align-middle" colspan="3" scope="col">ICU/HDU</th>
+                    <div sec:authorize="hasAuthority('ADMIN')">
+                        <th class="align-middle" colspan="2" scope="col">Events</th>
+                    </div>
                 </tr>
                 <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Facility</th>
-                    <th scope="col">Suspected + O2</th>
-                    <th scope="col">Suspected - O2</th>
-                    <th scope="col">Positive + O2</th>
-                    <th scope="col">Positive - O2</th>
-                    <th scope="col">HDU</th>
-                    <th scope="col">Positive ICU</th>
-                    <th scope="col">SARI ICU</th>
-                    <th colspan="2" scope="col">Actions</th>
+                    <th class="align-middle" scope="col">#</th>
+                    <th class="align-middle" scope="col">Facility</th>
+                    <th class="align-middle" scope="col">Suspected + O2</th>
+                    <th class="align-middle" scope="col">Suspected - O2</th>
+                    <th class="align-middle" scope="col">Positive + O2</th>
+                    <th class="align-middle" scope="col">Positive - O2</th>
+                    <th class="align-middle" scope="col">HDU</th>
+                    <th class="align-middle" scope="col">Positive ICU</th>
+                    <th class="align-middle" scope="col">SARI ICU</th>
+                    <div sec:authorize="hasAuthority('ADMIN')">
+                        <th class="align-middle" colspan="2" scope="col">Actions</th>
+                    </div>
                 </tr>
                 </thead>
                 <tbody>
                     <tr th:each="prod : ${hospitalModels}">
-                        <th scope="row" th:text="${prod.serial_number}" th:field="*{serial_number}"></th>
-                        <td th:text="${prod.hospital_Name}" th:field="*{hospital_Name}"></td>
-                        <td th:text="${prod.suspected_with_O2}" th:field="*{suspected_with_O2}"></td>
-                        <td th:text="${prod.suspected_without_O2}" th:field="*{suspected_without_O2}"></td>
-                        <td th:text="${prod.positive_with_O2}" th:field="*{positive_with_O2}"></td>
-                        <td th:text="${prod.positive_without_O2}" th:field="*{positive_without_O2}"></td>
-                        <td th:text="${prod.hdu}" th:field="*{hdu}"></td>
-                        <td th:text="${prod.positive_icu}" th:field="*{positive_icu}"></td>
-                        <td th:text="${prod.sari_icu}" th:field="*{sari_icu}"></td>
-                        <td>
-                            <form th:action="@{/hospitalUpdate}" th:object="${hospitalUpdateForm}" method="post">
-                                <input type="hidden" name="id" th:value="${prod.id}">
-                                <input type="hidden" name="serial_number" th:value="${prod.serial_number}">
-                                <input type="hidden" name="hospital_Name" th:value="${prod.hospital_Name}">
-                                <input type="hidden" name="suspected_with_O2" th:value="${prod.suspected_with_O2}">
-                                <input type="hidden" name="suspected_without_O2" th:value="${prod.suspected_without_O2}">
-                                <input type="hidden" name="positive_with_O2" th:value="${prod.positive_with_O2}">
-                                <input type="hidden" name="positive_without_O2" th:value="${prod.positive_without_O2}">
-                                <input type="hidden" name="hdu" th:value="${prod.hdu}">
-                                <input type="hidden" name="positive_icu" th:value="${prod.positive_icu}">
-                                <input type="hidden" name="sari_icu" th:value="${prod.sari_icu}">
-                                <button type="submit" class="btn btn-outline-primary">Update</button>
-                            </form>
-                        </td>
-                        <td>
-                            <form th:action="@{/hospitalDelete}" th:object="${hospitalUpdateForm}" method="post">
-                                <input type="hidden" name="id" th:value="${prod.id}">
-                                <input type="hidden" name="serial_number" th:value="${prod.serial_number}">
-                                <input type="hidden" name="hospital_Name" th:value="${prod.hospital_Name}">
-                                <input type="hidden" name="suspected_with_O2" th:value="${prod.suspected_with_O2}">
-                                <input type="hidden" name="suspected_without_O2" th:value="${prod.suspected_without_O2}">
-                                <input type="hidden" name="positive_with_O2" th:value="${prod.positive_with_O2}">
-                                <input type="hidden" name="positive_without_O2" th:value="${prod.positive_without_O2}">
-                                <input type="hidden" name="hdu" th:value="${prod.hdu}">
-                                <input type="hidden" name="positive_icu" th:value="${prod.positive_icu}">
-                                <input type="hidden" name="sari_icu" th:value="${prod.sari_icu}">
-                                <button type="submit" class="btn btn-outline-danger">Delete</button>
-                            </form>
-                        </td>
+                        <th class="align-middle" scope="row" th:text="${prod.serial_number}" th:field="*{serial_number}"></th>
+                        <td class="align-middle" th:text="${prod.hospital_Name}" th:field="*{hospital_Name}"></td>
+                        <td class="align-middle" th:text="${prod.suspected_with_O2}" th:field="*{suspected_with_O2}"></td>
+                        <td class="align-middle" th:text="${prod.suspected_without_O2}" th:field="*{suspected_without_O2}"></td>
+                        <td class="align-middle" th:text="${prod.positive_with_O2}" th:field="*{positive_with_O2}"></td>
+                        <td class="align-middle" th:text="${prod.positive_without_O2}" th:field="*{positive_without_O2}"></td>
+                        <td class="align-middle" th:text="${prod.hdu}" th:field="*{hdu}"></td>
+                        <td class="align-middle" th:text="${prod.positive_icu}" th:field="*{positive_icu}"></td>
+                        <td class="align-middle" th:text="${prod.sari_icu}" th:field="*{sari_icu}"></td>
+                            <div sec:authorize="hasAuthority('ADMIN')">
+                                <td>
+                                    <form th:action="@{/hospitalUpdate}" th:object="${hospitalUpdateForm}" method="post">
+                                        <input type="hidden" name="id" th:value="${prod.id}">
+                                        <input type="hidden" name="serial_number" th:value="${prod.serial_number}">
+                                        <input type="hidden" name="hospital_Name" th:value="${prod.hospital_Name}">
+                                        <input type="hidden" name="suspected_with_O2" th:value="${prod.suspected_with_O2}">
+                                        <input type="hidden" name="suspected_without_O2" th:value="${prod.suspected_without_O2}">
+                                        <input type="hidden" name="positive_with_O2" th:value="${prod.positive_with_O2}">
+                                        <input type="hidden" name="positive_without_O2" th:value="${prod.positive_without_O2}">
+                                        <input type="hidden" name="hdu" th:value="${prod.hdu}">
+                                        <input type="hidden" name="positive_icu" th:value="${prod.positive_icu}">
+                                        <input type="hidden" name="sari_icu" th:value="${prod.sari_icu}">
+                                        <button type="submit" class="btn btn-outline-primary">Update</button>
+                                    </form>
+                                </td>
+                            </div>
+                            <div sec:authorize="hasAuthority('ADMIN')">
+                                <td>
+                                    <form th:action="@{/hospitalDelete}" th:object="${hospitalUpdateForm}" method="post">
+                                        <input type="hidden" name="id" th:value="${prod.id}">
+                                        <input type="hidden" name="serial_number" th:value="${prod.serial_number}">
+                                        <input type="hidden" name="hospital_Name" th:value="${prod.hospital_Name}">
+                                        <input type="hidden" name="suspected_with_O2" th:value="${prod.suspected_with_O2}">
+                                        <input type="hidden" name="suspected_without_O2" th:value="${prod.suspected_without_O2}">
+                                        <input type="hidden" name="positive_with_O2" th:value="${prod.positive_with_O2}">
+                                        <input type="hidden" name="positive_without_O2" th:value="${prod.positive_without_O2}">
+                                        <input type="hidden" name="hdu" th:value="${prod.hdu}">
+                                        <input type="hidden" name="positive_icu" th:value="${prod.positive_icu}">
+                                        <input type="hidden" name="sari_icu" th:value="${prod.sari_icu}">
+                                        <button type="submit" class="btn btn-outline-danger">Delete</button>
+                                    </form>
+                                </td>
+                            </div>
                     </tr>
                 </tbody>
             </table>
