--- a/src/main/resources/templates/hospitalDeleteFormPage.html
+++ b/src/main/resources/templates/hospitalDeleteFormPage.html
@@ -11,11 +11,11 @@
 
 <body>
 <div class="container">
-    <div class="p-3 mb-2 bg-warning text-dark .bg-gradient text-center fst-italic fw-bold">
+    <div class="p-3 bg-warning text-dark .bg-gradient text-center fst-italic fw-bold">
         <h1> Supremo Healthcare </h1>
     </div>
 
-    <nav class=".mb-2 navbar navbar-dark bg-dark navbar-expand-lg">
+    <nav class="mb-4 navbar navbar-dark bg-dark navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="/home">Home</a>
             <a class="navbar-brand" href="/hospitalcreate">Add Facility</a>
