--- a/src/main/resources/templates/hospitalCreateFormPage.html
+++ b/src/main/resources/templates/hospitalCreateFormPage.html
@@ -29,55 +29,55 @@
         <div class="row mb-3">
             <label class="col-sm-2 col-form-label">Serial No</label>
             <div class="col-sm-10">
-                <input type="text" name="serial_number" th:value="${hospitalUpdateForm.serial_number}">
+                <input type="text" name="serial_number" th:value="${hospitalUpdateForm.serial_number}" required>
             </div>
         </div>
         <div class="row mb-3">
             <label class="col-sm-2 col-form-label">Facility Name</label>
             <div class="col-sm-10">
-                <input type="text" name="hospital_Name" th:value="${hospitalUpdateForm.hospital_Name}">
+                <input type="text" name="hospital_Name" th:value="${hospitalUpdateForm.hospital_Name}" required>
             </div>
         </div>
         <div class="row mb-3">
             <label class="col-sm-2 col-form-label">Suspected With O2</label>
             <div class="col-sm-10">
-                <input type="text" name="suspected_with_O2" th:value="${hospitalUpdateForm.suspected_with_O2}">
+                <input type="text" name="suspected_with_O2" th:value="${hospitalUpdateForm.suspected_with_O2}" required>
             </div>
         </div>
         <div class="row mb-3">
             <label class="col-sm-2 col-form-label">Suspected without O2</label>
             <div class="col-sm-10">
-                <input type="text" name="suspected_without_O2" th:value="${hospitalUpdateForm.suspected_without_O2}">
+                <input type="text" name="suspected_without_O2" th:value="${hospitalUpdateForm.suspected_without_O2}" required>
             </div>
         </div>
         <div class="row mb-3">
             <label class="col-sm-2 col-form-label">Positive with O2</label>
             <div class="col-sm-10">
-                <input type="text" name="positive_with_O2" th:value="${hospitalUpdateForm.positive_with_O2}">
+                <input type="text" name="positive_with_O2" th:value="${hospitalUpdateForm.positive_with_O2}" required>
             </div>
         </div>
         <div class="row mb-3">
             <label class="col-sm-2 col-form-label">Positive without O2</label>
             <div class="col-sm-10">
-                <input type="text" name="positive_without_O2" th:value="${hospitalUpdateForm.positive_without_O2}">
+                <input type="text" name="positive_without_O2" th:value="${hospitalUpdateForm.positive_without_O2}" required>
             </div>
         </div>
         <div class="row mb-3">
             <label class="col-sm-2 col-form-label">HDU</label>
             <div class="col-sm-10">
-                <input type="text" name="hdu" th:value="${hospitalUpdateForm.hdu}">
+                <input type="text" name="hdu" th:value="${hospitalUpdateForm.hdu}" required>
             </div>
         </div>
         <div class="row mb-3">
             <label class="col-sm-2 col-form-label">Positive ICU</label>
             <div class="col-sm-10">
-                <input type="text" name="positive_icu" th:value="${hospitalUpdateForm.positive_icu}">
+                <input type="text" name="positive_icu" th:value="${hospitalUpdateForm.positive_icu}" required>
             </div>
         </div>
         <div class="row mb-3">
             <label class="col-sm-2 col-form-label">SARI ICU</label>
             <div class="col-sm-10">
-                <input type="text" name="sari_icu" th:value="${hospitalUpdateForm.sari_icu}">
+                <input type="text" name="sari_icu" th:value="${hospitalUpdateForm.sari_icu}" required>
             </div>
         </div>
         <button type="submit" class="btn btn-primary">SUBMIT</button>
